--- a/exercicios/trabalhando-imagens-de-fundo/fundo006.html
+++ b/exercicios/trabalhando-imagens-de-fundo/fundo006.html
@@ -3,20 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundo006</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
+            
             height: 100vh;
+            /* 
             background-color: #000;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+            */
+
+            /* Shorthand - background 
+            color > image > position > repeat > {size} > attachment
+            */
+
+            background: #000 url(imagens/wallpaper002.jpg)
+            center center no-repeat fixed;
+            background-size: cover;
         }
 
         main {
             background-color: #fff;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid #000;
