--- a/exercicios/tabelas/tabela002.html
+++ b/exercicios/tabelas/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
@@ -19,13 +20,30 @@
             padding: 10px;
         }
 
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: #1452c5;
+        }
+
         thead, tfoot {
-            background-color: rgb(20, 82, 197);
+            background-color: #1452c5;
             color: #fff;
+        }
+
+        tbody > tr:nth-child(odd) {
+            background-color: rgb(144, 216, 238);
         }
 
         .num {
             text-align: right;
+        }
+
+        caption {
+            font-size: 1.5em;
+            font-weight: bolder;
+            padding: 10px;
+            background-color: lightblue;
         }
     </style>
 </head>
@@ -34,6 +52,7 @@
     <!--
     ANATOMIA PARA TABELAS GRANDES
     TABLE
+        Caption
         THEAD
             TR, TD, TH
         TBODY
@@ -43,10 +62,11 @@
      -->
 
      <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
 
@@ -163,7 +183,7 @@
 
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>210.147.125</strong></td>
             </tr>
         </tfoot>
