Estudos de flexbox

--- a/exercicios/flexbox/flex004/index.html
+++ b/exercicios/flexbox/flex004/index.html
@@ -8,12 +8,15 @@
         .container {
             background-color: lightcoral;
             display: flex;
+            flex-flow: row nowrap;
+            justify-content: center ;
+            height: 300px;
+            align-items: center;
         }
 
         .item {
             background-color: lightcyan;
             border: 1px solid #000;
-            flex: auto;
             text-align: center;
         }
     </style>
