--- a/exercicios/flexbox/flex010/index.html
+++ b/exercicios/flexbox/flex010/index.html
@@ -8,17 +8,13 @@
         .container {
             background-color: lightcoral;
             display: flex;
-            flex-flow: row wrap;
-            justify-content: flex-end;
-
         }
 
         .item {
             background-color: lightcyan;
             border: 1px solid #000;
+            flex: auto;
             text-align: center;
-            flex-basis: 150px;
-            
         }
     </style>
 </head>
@@ -26,10 +22,10 @@
     <div class="container">
         <div class="item">A</div>
         <div class="item">B</div>
-        <div class="item">conteudo maior ainda</div>
+        <div class="item">C</div>
         <div class="item">D</div>
         <div class="item">E</div>
-        <div class="item">aaaaaaaaaaaaaaaaaaaaaaaaaaa</div>
+        <div class="item">F</div>
         <div class="item">G</div>
     </div>
 </body>
