--- a/exercicios/flexbox/flex011/index.html
+++ b/exercicios/flexbox/flex011/index.html
@@ -16,17 +16,32 @@
             border: 1px solid #000;
             
             text-align: center;
-            flex-basis: 250px;
+            flex-basis: 200px;
+
+        }
+
+        #cxA {
             flex-shrink: 1;
             flex-grow: 1;
         }
+
+        #cxB {
+            flex-shrink: 1;
+            flex-grow: 1;
+        }
+
+        #cxC {
+            flex-shrink: 1;            
+            flex-grow: 1;
+        }
+
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="item">A</div>
-        <div class="item">B</div>
-        <div class="item">C</div>
+        <div class="item" id="cxA">A</div>
+        <div class="item" id="cxB">B</div>
+        <div class="item" id="cxC">C</div>
     </div>
 </body>
 </html>
